--- a/index.html
+++ b/index.html
@@ -15,79 +15,81 @@
     .btn:hover {background: #0056b3;}
     .result {font-size: 20px; text-align: center; margin-top: 20px;}
     #timer {font-size: 18px; font-weight: bold; text-align: center; margin-bottom: 15px; color: #d9534f;}
+    #welcome input, #welcome select {padding: 10px; font-size: 16px; margin: 10px 0; width: 100%;}
   </style>
 </head>
 <body>
-  <div class="container">
-    <h2>اختبار الكيمياء 🧪 (50 سؤال)</h2>
-    <div id="timer">الوقت المتبقي: 30:00</div>
-    <div id="quiz"></div>
-    <button class="btn" id="nextBtn">التالي</button>
-    <div class="result" id="result"></div>
-  </div>
+
+<div class="container" id="welcome">
+  <h2>مرحبًا بك في اختبار الكيمياء 🧪</h2>
+  <label for="studentName">اكتب اسمك:</label>
+  <input type="text" id="studentName" placeholder="اسمك هنا">
+  
+  <label for="studentClass">اختر شعبتك:</label>
+  <select id="studentClass">
+    <option value="">اختر رقم شعبتك</option>
+    <option value="1">1</option>
+    <option value="2">2</option>
+    <option value="3">3</option>
+    <option value="4">4</option>
+    <option value="5">5</option>
+    <option value="6">6</option>
+    <option value="7">7</option>
+  </select>
+  
+  <button class="btn" id="startBtn">ابدأ الاختبار</button>
+</div>
+
+<div class="container" id="quizContainer" style="display:none;">
+  <h2>اختبار الكيمياء 🧪 (50 سؤال)</h2>
+  <div id="timer">الوقت المتبقي: 30:00</div>
+  <div id="quiz"></div>
+  <button class="btn" id="nextBtn">التالي</button>
+  <div class="result" id="result"></div>
+</div>
 
 <script>
+// بيانات الاختبار
 const quizData = [
-{q:"من هو أول من قال إن المادة تتكون من جسيمات صغيرة سماها ذرات؟", a:["دالتون","طومسون","رذرفورد","ديموقريطس"], correct:3},
-{q:"اكتشف الإلكترون العالم:", a:["دالتون","طومسون","بور","شرودنجر"], correct:1},
-{q:"اكتشف النواة العالم:", a:["بور","ديموقريطس","رذرفورد","دالتون"], correct:2},
-{q:"من مكونات الذرة:", a:["إلكترونات فقط","بروتونات ونيوترونات وإلكترونات","بروتونات فقط","نيوترونات فقط"], correct:1},
-{q:"الشحنة الكهربائية للبروتون هي:", a:["سالبة","موجبة","متعادلة","غير معروفة"], correct:1},
-{q:"الشحنة الكهربائية للإلكترون هي:", a:["موجبة","سالبة","متعادلة","صفر"], correct:1},
-{q:"النيوترون يحمل شحنة:", a:["سالبة","موجبة","متعادلة","مزدوجة"], correct:2},
-{q:"تتركز كتلة الذرة في:", a:["الإلكترونات","النواة","المدار الأخير","مستويات الطاقة"], correct:1},
-{q:"الإلكترونات توجد في:", a:["داخل النواة","حول النواة","داخل البروتون","في الفراغ"], correct:1},
-{q:"العدد الذري للعنصر يساوي عدد:", a:["النيوترونات","البروتونات","الكتلة","الإلكترونات + النيوترونات"], correct:1},
-{q:"العدد الكتلي يساوي:", a:["البروتونات فقط","النيوترونات فقط","البروتونات + النيوترونات","الإلكترونات + النيوترونات"], correct:2},
-{q:"العنصر الذي له نفس العدد الذري يختلف في عدد النيوترونات يسمى:", a:["نظير","أيون","مركب","جزيء"], correct:0},
-{q:"ذرة الهيدروجين التي لا تحتوي على نيوترونات هي:", a:["البروتيوم","الديتيريوم","التريتيوم","النظير الثاني"], correct:0},
-{q:"النموذج الذري الذي يشبه النظام الشمسي هو نموذج:", a:["بور","رذرفورد","طومسون","دالتون"], correct:0},
-{q:"نموذج طومسون للذرة يسمى:", a:["النموذج الكروي","نموذج الفطيرة","نموذج كرة البلياردو","نموذج السحابة الإلكترونية"], correct:1},
-{q:"نموذج بور وضّح أن الإلكترونات:", a:["ساكنة في أماكنها","تدور في مدارات محددة الطاقة","توجد في النواة","تختفي فجأة"], correct:1},
-{q:"رمز العنصر يعبّر عن:", a:["عدد الإلكترونات فقط","اسم العنصر وعدده الذري","نوع العنصر فقط","الكتلة فقط"], correct:1},
-{q:"ما الذي يحدد هوية العنصر؟", a:["عدد النيوترونات","عدد البروتونات","عدد الإلكترونات","عدد الكتلة"], correct:1},
-{q:"الإلكترونات في المستوى الأخير تسمى:", a:["الداخلية","التكافؤ","الحرة","السالبة"], correct:1},
-{q:"ماذا يحدث عند فقدان الذرة لإلكترون؟", a:["تصبح متعادلة","تصبح أيونًا موجبًا","تصبح أيونًا سالبًا","تزداد كتلتها"], correct:1},
-{q:"عدد مستويات الطاقة الرئيسة في الذرة هو:", a:["3","5","7","9"], correct:2},
-{q:"أول مستوى طاقة رئيسي يستطيع حمل:", a:["إلكترونين","4 إلكترونات","8 إلكترونات","18 إلكترونًا"], correct:0},
-{q:"الصيغة العامة لحساب عدد الإلكترونات في أي مستوى طاقة هي:", a:["2n²","n²","4n","2n"], correct:0},
-{q:"المستوى الثالث يمكن أن يحتوي على:", a:["2 إلكترون","8 إلكترونات","18 إلكترون","32 إلكترون"], correct:2},
-{q:"العالم الذي وضع معادلة تصف حركة الإلكترونات كموجات هو:", a:["بور","شرودنجر","دالتون","رذرفورد"], correct:1},
-{q:"النموذج الميكانيكي الكمي للذرة وصف الإلكترونات بأنها:", a:["جسيمات ثابتة","جسيمات وموجات في نفس الوقت","بروتونات","طاقة فقط"], correct:1},
-{q:"أي من الجسيمات التالية كتلته أصغر؟", a:["البروتون","النيوترون","الإلكترون","النواة"], correct:2},
-{q:"الجسيمات الموجودة في النواة هي:", a:["البروتونات والنيوترونات","الإلكترونات فقط","البروتونات فقط","الإلكترونات والنيوترونات"], correct:0},
-{q:"وحدة الكتلة الذرية تعادل تقريبًا كتلة:", a:["إلكترون","نيوترون","بروتون","نواة"], correct:2},
-{q:"إذا كان عدد البروتونات = عدد الإلكترونات، فإن الذرة تكون:", a:["موجبة","سالبة","متعادلة","مشحونة"], correct:2},
-{q:"النظيرين يختلفان في:", a:["عدد البروتونات","عدد الإلكترونات","عدد النيوترونات","نوع العنصر"], correct:2},
-{q:"مجموع البروتونات والنيوترونات في الذرة يسمى:", a:["العدد الذري","العدد الكتلي","رقم الطاقة","رقم المدار"], correct:1},
-{q:"ما الجسيمات التي تحدد النشاط الكيميائي للعنصر؟", a:["النيوترونات","إلكترونات التكافؤ","البروتونات","جميعها"], correct:1},
-{q:"أول من افترض أن الذرة غير قابلة للانقسام هو:", a:["بور","ديموقريطس","طومسون","شرودنجر"], correct:1},
-{q:"جسيم يحمل الشحنة السالبة وكتلته صغيرة جدًا:", a:["بروتون","إلكترون","نيوترون","نواة"], correct:1},
-{q:"الذرات التي تفقد أو تكتسب إلكترونات تسمى:", a:["أيونات","نظائر","مركبات","جسيمات ألفا"], correct:0},
-{q:"أي مما يلي له شحنة موجبة؟", a:["النواة","الإلكترون","المدار","السحابة"], correct:0},
-{q:"إذا كان العنصر يحتوي على 17 بروتونًا، فإن عدده الذري هو:", a:["16","17","18","34"], correct:1},
-{q:"أي مما يلي يُعد جسيمًا دون ذري؟", a:["الذرة","البروتون","العنصر","الجزيء"], correct:1},
-{q:"النواة تحتوي على:", a:["بروتونات فقط","نيوترونات فقط","بروتونات ونيوترونات","إلكترونات"], correct:2},
-{q:"كتلة الإلكترون تساوي تقريبًا:", a:["مثل البروتون","نصف البروتون","صغيرة جدًا","مثل النيوترون"], correct:2},
-{q:"الذرة التي تفقد إلكترونًا تصبح:", a:["سالبة","موجبة","متعادلة","نظير"], correct:1},
-{q:"الإلكترونات تدور حول النواة بسبب:", a:["الجاذبية","القوة الكهربائية","الكتلة","العشوائية"], correct:1},
-{q:"أكبر كتلة توجد في:", a:["الإلكترون","النواة","المدار الأخير","السحابة الإلكترونية"], correct:1},
-{q:"رمز العنصر الذي يحتوي على 11 بروتون هو:", a:["Na","Cl","O","N"], correct:0},
-{q:"النموذج الذي وصف الإلكترونات كسحابة من الاحتمالات هو:", a:["بور","شرودنجر","رذرفورد","طومسون"], correct:1},
-{q:"تسمى المنطقة التي يوجد فيها احتمال كبير لوجود الإلكترون:", a:["المدار","السحابة الإلكترونية","النواة","المستوى الرئيسي"], correct:1},
-{q:"عدد الإلكترونات في الذرة المتعادلة يساوي عدد:", a:["البروتونات","النيوترونات","النواة","الطاقة"], correct:0},
-{q:"العالم الذي وضع أول نظرية ذرية علمية هو:", a:["بور","دالتون","طومسون","رذرفورد"], correct:1},
-{q:"جميع الذرات لعنصر معين لها نفس:", a:["عدد النيوترونات","عدد البروتونات","عدد الكتلة","عدد الطاقة"], correct:1}
+  {q:"من هو أول من قال إن المادة تتكون من جسيمات صغيرة سماها ذرات؟", a:["دالتون","طومسون","رذرفورد","ديموقريطس"], correct:3},
+  {q:"اكتشف الإلكترون العالم:", a:["دالتون","طومسون","بور","شرودنجر"], correct:1},
+  {q:"اكتشف النواة العالم:", a:["بور","ديموقريطس","رذرفورد","دالتون"], correct:2},
+  {q:"من مكونات الذرة:", a:["إلكترونات فقط","بروتونات ونيوترونات وإلكترونات","بروتونات فقط","نيوترونات فقط"], correct:1},
+  {q:"الشحنة الكهربائية للبروتون هي:", a:["سالبة","موجبة","متعادلة","غير معروفة"], correct:1},
+  {q:"الشحنة الكهربائية للإلكترون هي:", a:["موجبة","سالبة","متعادلة","صفر"], correct:1},
+  {q:"النيوترون يحمل شحنة:", a:["سالبة","موجبة","متعادلة","مزدوجة"], correct:2},
+  {q:"تتركز كتلة الذرة في:", a:["الإلكترونات","النواة","المدار الأخير","مستويات الطاقة"], correct:1},
+  {q:"الإلكترونات توجد في:", a:["داخل النواة","حول النواة","داخل البروتون","في الفراغ"], correct:1},
+  {q:"العدد الذري للعنصر يساوي عدد:", a:["النيوترونات","البروتونات","الكتلة","الإلكترونات + النيوترونات"], correct:1},
+  // يمكنك إضافة بقية الأسئلة هنا بنفس الصيغة
 ];
 
 let current = 0;
 let score = 0;
 let timeLeft = 30 * 60;
+let studentName = "";
+let studentClass = "";
 
+const welcomeEl = document.getElementById("welcome");
+const startBtn = document.getElementById("startBtn");
+const quizContainer = document.getElementById("quizContainer");
 const quizEl = document.getElementById("quiz");
 const nextBtn = document.getElementById("nextBtn");
 const resultEl = document.getElementById("result");
 const timerEl = document.getElementById("timer");
+
+// بدء الاختبار
+startBtn.onclick = ()=>{
+  studentName = document.getElementById("studentName").value.trim();
+  studentClass = document.getElementById("studentClass").value;
+  if(studentName === "") return alert("الرجاء كتابة اسمك!");
+  if(studentClass === "") return alert("الرجاء اختيار رقم شعبتك!");
+  
+  welcomeEl.style.display = "none";
+  quizContainer.style.display = "block";
+  loadQuestion();
+  startTimer();
+};
 
 function formatTime(sec){
   const m = Math.floor(sec/60).toString().padStart(2,"0");
@@ -95,14 +97,17 @@ function formatTime(sec){
   return `${m}:${s}`;
 }
 
-const timer = setInterval(()=>{
-  timeLeft--;
-  timerEl.textContent = `الوقت المتبقي: ${formatTime(timeLeft)}`;
-  if(timeLeft <= 0){
-    clearInterval(timer);
-    endQuiz();
-  }
-},1000);
+let timer;
+function startTimer(){
+  timer = setInterval(()=>{
+    timeLeft--;
+    timerEl.textContent = `الوقت المتبقي: ${formatTime(timeLeft)}`;
+    if(timeLeft <= 0){
+      clearInterval(timer);
+      endQuiz();
+    }
+  },1000);
+}
 
 function loadQuestion() {
   const q = quizData[current];
@@ -136,7 +141,7 @@ function endQuiz(){
   quizEl.innerHTML = "";
   nextBtn.style.display = "none";
   timerEl.textContent = "انتهى الوقت!";
-  resultEl.textContent = `⏰ انتهى الاختبار. نتيجتك: ${score} من ${quizData.length}`;
+  resultEl.innerHTML = `⏰ انتهى الاختبار.<br>الاسم: <b>${studentName}</b><br>الشعبة: <b>${studentClass}</b><br>النتيجة: <b>${score} من ${quizData.length}</b>`;
 }
 
 nextBtn.onclick = ()=>{
@@ -151,8 +156,7 @@ nextBtn.onclick = ()=>{
     }
   },1500);
 };
-
-loadQuestion();
 </script>
+
 </body>
 </html>
